--- a/Firebase/firebase-angular/src/app/app.component.html
+++ b/Firebase/firebase-angular/src/app/app.component.html
@@ -1,14 +1,9 @@
-<!--<button (click)="listPush()">List Push</button>
-<button (click)="listRemove()">List Remove</button>
-<button (click)="listUpdate()">List Update</button>
-<button (click)="objectUpdate()">Object Update</button>
-<button (click)="objectSet()">Object Set</button>-->
-
+<app-top-menu></app-top-menu>
 <main class="l-main l-sample-app">
   <div>
     <div class="main-container">
       <div class="list">
-        <app-home></app-home>
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
